--- a/AppEducation/AppEducation/Views/Shared/_Layout.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="~/css/responsive.css">
     <!-- AOS Library -->
     <link rel="stylesheet" href="~/css/aos.css">
+    <link rel="stylesheet" href="~/css/dangnhap.css">
     <!--Fonts style-->
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
