--- a/AppEducation/AppEducation/Views/Client/Register.cshtml
+++ b/AppEducation/AppEducation/Views/Client/Register.cshtml
@@ -128,7 +128,7 @@
             <div class="card card-4">
                 <div class="card-body">
                     <h2 class="title">Registration Form</h2>
-                    <form asp-area="" asp-controller="Account" asp-action="Register" method="POST">
+                    <form asp-area="" asp-controller="Client" asp-action="Register" method="POST">
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
