--- a/AppEducation/AppEducation/Views/Home/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿
-
 @section Head {
         <title>MTA Education 2020</title>
         <!-- Favicon -->
@@ -35,9 +34,8 @@
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="account-area text-right">
                         <ul>
-                            <li><a href="register.html">Đăng ký</a></li>
-                            <li><a href="checkout.html">Đăng xuất</a></li>
-                            <li><a href="login.html">Đăng nhập</a></li>
+                            <li><a asp-area="" asp-controller="Client" asp-action="Register">Đăng ký</a></li>
+                            <li><a asp-area="" asp-controller="Client" asp-action="Login">Đăng nhập</a></li>
                         </ul>
                     </div>
                 </div>
@@ -74,13 +72,13 @@
                     <div class="text-center" style="margin-left: 300px;">
                         <div class="menu-area">
                             <div class="safe-area">
-                                <a href="#">Trang Chủ</a>
+                                <a asp-area="" asp-controller="Home" asp-action="Index">Trang Chủ</a>
                             </div>
                             <div class="safe-area">
-                                <a href="#">Đăng Kí</a>
+                                <a asp-area="" asp-controller="Client" asp-action="Register">Đăng Kí</a>
                             </div>
                             <div class="safe-area">
-                                <a href="#">Đăng Nhập</a>
+                                <a asp-area="" asp-controller="Client" asp-action="Login">Đăng Nhập</a>
                             </div>	
                             <div class="safe-area">
                                 <a href="#">Liên Hệ</a>
@@ -100,9 +98,9 @@
                     <div class="mobile-menu">
                         <nav id="mobile-menu-active">
                             <ul id="nav">
-                                <li class=""><a href="#">Trang Chủ</a></li>
-                                <li><a href="#">Đăng Kí </a></li>
-                                <li><a href="#">Đăng Nhập</a></li>
+                                <li class=""> <a asp-area="" asp-controller="Home" asp-action="Index">Trang Chủ</a> </li>
+                                <li><a asp-area="" asp-controller="Client" asp-action="Register">Đăng Kí</a>li>
+                                <li><a asp-area="" asp-controller="Client" asp-action="Login">Đăng Nhập</a></li>
                                 <li><a href="#">Liên Hệ</a></li>
                             </ul>
                         </nav>
