--- a/AppEducation/AppEducation/Views/Client/Register.cshtml
+++ b/AppEducation/AppEducation/Views/Client/Register.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Register";
+    Layout = "_LayoutHome";
 }
 
 @section Head {
@@ -18,109 +19,8 @@
     <!-- Main CSS-->
     <link href="~/pages/register/css/main.css" rel="stylesheet" media="all">
     
-
-    <!-- animate css -->
-    <link rel="stylesheet" href="~/pages/home/css/animate.css">
-    <link rel="stylesheet" href="~/pages/home/css/linearicons.css">
-    <!-- meanmenu css -->
-    <link rel="stylesheet" href="~/pages/home/css/meanmenu.min.css">
-    <!-- owl.carousel css -->
-    <link rel="stylesheet" href="~/pages/home/css/owl.carousel.css">
-    <!-- style css -->
-    <link rel="stylesheet" href="~/pages/home/css/style.css">
-    <!-- responsive css -->
-    <link rel="stylesheet" href="~/pages/home/css/responsive.css">
     <link rel="shortcut icon" type="image/x-icon" href="~/pages/home/img/favicon.png">
-}
 
-@section Header {
-    <!-- header-top-area-start -->
-    <div class="header-top-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="account-area text-right">
-                        <ul>
-                            <li><a href="register.html">Đăng ký</a></li>
-                            <li><a href="checkout.html">Đăng xuất</a></li>
-                            <li><a href="login.html">Đăng nhập</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- header-top-area-end -->
-    <!-- header-mid-area-start -->
-    <div class="header-mid-area ptb-40">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12">
-                    <div class="header-search">
-                        <form action="#">
-                            <input type="text" placeholder="Search entire store here..." />
-                            <a href="#"><i class="fa fa-search"></i></a>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
-                    <div class="logo-area text-center logo-xs-mrg">
-                        <a href="index.html"><img src="~/pages/home/img/logo.png" alt="logo" /></a>
-                    </div>
-                </div>						
-            </div>
-        </div>
-    </div>
-    <!-- header-mid-area-end -->
-    <!-- main-menu-area-start -->
-    <div class="main-menu-area hidden-sm hidden-xs sticky-header-1" id="header-sticky">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="text-center" style="margin-left: 300px;">
-                        <div class="menu-area">
-                            <div class="safe-area">
-                                <a href="#">Trang Chủ</a>
-                            </div>
-                            <div class="safe-area">
-                                <a href="#">Đăng Kí</a>
-                            </div>
-                            <div class="safe-area">
-                                <a href="#">Đăng Nhập</a>
-                            </div>	
-                            <div class="safe-area">
-                                <a href="#">Liên Hệ</a>
-                            </div>	                         
-                        </div>                           
-                    </div>					
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- main-menu-area-end -->
-    <!-- mobile-menu-area-start -->
-    <div class="mobile-menu-area hidden-md hidden-lg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="mobile-menu">
-                        <nav id="mobile-menu-active">
-                            <ul id="nav">
-                                <li class=""><a href="#">Trang Chủ</a></li>
-                                <li><a href="#">Đăng Kí </a></li>
-                                <li><a href="#">Đăng Nhập</a></li>
-                                <li><a href="#">Liên Hệ</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>    
-        <!-- mobile-menu-area-end -->
 }
 
     <div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
@@ -158,11 +58,11 @@
                                     <label class="label">Gender</label>
                                     <div class="p-t-10">
                                         <label class="radio-container m-r-45">Male
-                                            <input asp-for="Sex" type="radio" value="true" checked="checked" >
+                                            <input name="Sex" type="radio" value="true" checked="checked" >
                                             <span class="checkmark"></span>
                                         </label>
                                         <label class="radio-container">Female
-                                            <input asp-for="Sex" type="radio" value="false" >
+                                            <input name="Sex" type="radio" value="false" >
                                             <span class="checkmark"></span>
                                         </label>
                                     </div>
@@ -203,85 +103,6 @@
         </div>
     </div>
 
-    @section Footer {	
-        <footer>			
-			<div class="footer-mid ptb-50">
-				<div class="container">
-					<div class="row">
-				        <div class="col-lg-8 col-md-8 col-sm-12">
-				            <div class="row">				                
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="single-footer br-2 xs-mb">
-                                        <div class="footer-title mb-20">
-                                            <h3>Chương Trình</h3>
-                                        </div>
-                                        <div class="footer-mid-menu">
-                                            <ul>
-                                                <li><a href="contact.html">Quy Định</a></li>
-                                                <li><a href="#">Chính Sách Dịch Vụ</a></li>
-                                                <li><a href="#">Chính Sách Bảo Mật</a></li>
-                                                <li><a href="register.html">Kiểm Tra Trình Độ </a></li>
-                                            </ul>
-                                        </div>	
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="single-footer br-2 xs-mb">
-                                        <div class="footer-title mb-20">
-                                            <h3>Tài Nguyên Miễn Phí</h3>
-                                        </div>
-                                        <div class="footer-mid-menu">
-                                            <ul>
-                                                <li><a href="contact.html">Tài liệu</a></li>
-                                                <li><a href="#">Blog</a></li>
-                                                <li><a href="#"> Bài test</a></li>
-                                                <li><a href="#">Nhận học miễn phí qua gmail</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-				            </div>
-				        </div>				                  
-                        <div class="col-lg-4 col-md-4 col-sm-12">
-                            <div class="single-footer mrg-sm">
-                                <div class="footer-title mb-20">
-                                    <h3>Liên Hệ</h3>
-                                </div>
-                                <div class="footer-contact">
-                                    <p class="adress">
-                                        <span>Địa Chỉ</span>
-                                        236 Hoàng Quốc Việt
-                                    </p>
-                                    <p><span>Số Điện Thoại:</span> (+84)0123456789</p>
-                                    <p><span>Gmail:</span>  Education@gmail.com</p>
-                                </div>
-                            </div>
-				        </div>
-					</div>
-				</div>
-			</div>
-			<div class="footer-bottom">
-				<div class="container">
-					<div class="row bt-2">						
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<div class="link-follow">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                                    <li class="hidden-sm"><a href="#"><i class="fa fa-vimeo"></i></a></li>
-                                    <li class="hidden-sm"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
-		<!-- End footer Area -->
-    }
 @section Script
 {
     <!-- Jquery JS-->
@@ -290,4 +111,5 @@
     <script src="~/pages/register/vendor/datepicker/daterangepicker.js"></script>
     <!-- Main JS-->
     <script src="~/pages/register/js/global.js"></script>
+ 
 }
