--- a/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
                     <div class="logo-area text-center logo-xs-mrg">
-                        <a href="index.html"><img src="~/pages/home/img/logo.png" alt="logo" /></a>
+                        <a href="index.html"><img  src="~/pages/login/img/logo.png" alt="logo" /></a>
                     </div>
                 </div>						
             </div>
