--- a/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutHome.cshtml
@@ -81,10 +81,10 @@
                                 <a asp-area="" asp-controller="Home" asp-action="Index">Trang Chủ</a>
                             </div>
                             <div class="safe-area">
-                                <a asp-area="" asp-controller="Client" asp-action="Register">Đăng Kí</a>
+                                <a asp-area="" asp-controller="Account" asp-action="Register">Đăng Kí</a>
                             </div>
                             <div class="safe-area">
-                                <a asp-area="" asp-controller="Client" asp-action="Login">Đăng Nhập</a>
+                                <a asp-area="" asp-controller="Account" asp-action="Login">Đăng Nhập</a>
                             </div>	
                             <div class="safe-area">
                                 <a href="#">Liên Hệ</a>
@@ -105,8 +105,8 @@
                         <nav id="mobile-menu-active">
                             <ul id="nav">
                                 <li class=""> <a asp-area="" asp-controller="Home" asp-action="Index">Trang Chủ</a> </li>
-                                <li><a asp-area="" asp-controller="Client" asp-action="Register">Đăng Kí</a>li>
-                                <li><a asp-area="" asp-controller="Client" asp-action="Login">Đăng Nhập</a></li>
+                                <li><a asp-area="" asp-controller="Account" asp-action="Register">Đăng Kí</a>li>
+                                <li><a asp-area="" asp-controller="Account" asp-action="Login">Đăng Nhập</a></li>
                                 <li><a href="#">Liên Hệ</a></li>
                             </ul>
                         </nav>
