--- a/AppEducation/AppEducation/Views/_ViewImports.cshtml
+++ b/AppEducation/AppEducation/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using AppEducation
 @using AppEducation.Models
 @using AppEducation.Models.Users
+@using Microsoft.AspNetCore.Identity
 @using System.Linq;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
