modify admin page

--- a/AppEducation/AppEducation/Views/Admin/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/Index.cshtml
@@ -1,5 +1,7 @@
 @model IEnumerable<AppUser>
-
+@{
+  Layout = "_Layout";
+}
 @section Head {
   <title>MTA ADMIN | Dashboard</title>
   <!-- Google Font: Source Sans Pro -->
