--- a/AppEducation/AppEducation/Views/Admin/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/Index.cshtml
@@ -1,33 +1,8 @@
 @model IEnumerable<AppUser>
 @{
-  Layout = "_Layout";
+  Layout = "_LayoutAdmin";
+  ViewData["Title"] = "Index";
 }
-@section Head {
-  <title>MTA ADMIN | Dashboard</title>
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
-    <!-- Select2 -->
-  <link rel="stylesheet" href="~/plugins/select2/css/select2.min.css">
-  <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">
-}
-
 
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -43,7 +18,7 @@
         <a href="index3.html" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="#" class="nav-link">@ViewData["Title"]</a>
       </li>
     </ul>
 
@@ -329,6 +304,7 @@
                     <th>STT</th>
                     <th>ID</th>
                     <th>User Name</th>
+                    <th>Email</th>
                     <th>Password</th>
                     <th>Modify</th>
                   </tr>
@@ -344,6 +320,7 @@
                           <td>@i</td>
                           <td>@user.Id</td>
                           <td>@user.UserName</td>
+                          <td>@user.Email</td>
                           <td>@user.PasswordHash</td>
                           <td>
                               <form asp-action="Delete" asp-route-id="@user.Id" method="post">
@@ -396,83 +373,3 @@
 <!-- ./wrapper -->
 </body>
 
-@section Script {
-    <!-- jQuery -->
-    <script src="~/plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-    <script>
-      $.widget.bridge('uibutton', $.ui.button)
-    </script>
-    <!-- Bootstrap 4 -->
-    <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- ChartJS -->
-    <script src="~/plugins/chart.js/Chart.min.js"></script>
-    <!-- Sparkline -->
-    <script src="~/plugins/sparklines/sparkline.js"></script>
-    <!-- JQVMap -->
-    <script src="~/plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-    <!-- jQuery Knob Chart -->
-    <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
-    <!-- daterangepicker -->
-    <script src="~/plugins/moment/moment.min.js"></script>
-    <script src="~/plugins/daterangepicker/daterangepicker.js"></script>
-    <!-- Tempusdominus Bootstrap 4 -->
-    <script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-    <!-- Summernote -->
-    <script src="~/plugins/summernote/summernote-bs4.min.js"></script>
-    <!-- overlayScrollbars -->
-    <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/dist/js/adminlte.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="~/dist/js/demo.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="~/dist/js/pages/dashboard.js"></script>
-    <script>
-        $(document).ready(function(){
-          $("#UserRegis").click(function(){
-            $("#section-content").hide();
-            $("#table-user").show();
-          });
-        })
-        $(function () {
-        $('.select2').select2()
-        });
-    </script>
-    <script src="~/plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap 4 -->
-  <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- DataTables  & Plugins -->
-  <script src="~/plugins/datatables/jquery.dataTables.min.js"></script>
-  <script src="~/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-  <script src="~/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-  <script src="~/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-  <script src="~/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-  <script src="~/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-  <script src="~/plugins/jszip/jszip.min.js"></script>
-  <script src="~/plugins/pdfmake/pdfmake.min.js"></script>
-  <script src="~/plugins/pdfmake/vfs_fonts.js"></script>
-  <script src="~/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-  <script src="~/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-  <script src="~/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-  <script>
-    $(function () {
-      $("#example1").DataTable({
-        "responsive": true, "lengthChange": false, "autoWidth": false,
-        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-      }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-      $('#example2').DataTable({
-        "paging": true,
-        "lengthChange": false,
-        "searching": false,
-        "ordering": true,
-        "info": true,
-        "autoWidth": false,
-        "responsive": true,
-      });
-    });
-  </script>
-}
