--- a/AppEducation/AppEducation/Views/Shared/_Layout.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_Layout.cshtml
@@ -5,14 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" src="~/lib/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
     
     <title>@ViewData["Title"] - MTA EDUCATION</title>
     
     @RenderSection("Head", required: false)
-
-
 </head>
+
 <body>
 
     @RenderSection("Header", required: false)
