--- a/AppEducation/AppEducation/Views/Account/Register.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Register.cshtml
@@ -28,6 +28,7 @@
             <div class="card card-4">
                 <div class="card-body">
                     <h2 class="title">Registration Form</h2>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <form asp-area="" asp-controller="Account" asp-action="Register" method="POST">
                         <div class="row row-space">
                             <div class="col-2">
@@ -105,6 +106,12 @@
 
 @section Script
 {
+    <script type="text/javascript">
+    
+        $(document).ready(function(){
+            $("input.input-validation-error").closest(".input-group").addClass("has-danger")
+        })
+    </script>
     <!-- Jquery JS-->
     <script src="~/pages/register/vendor/select2/select2.min.js"></script>
     <script src="~/pages/register/vendor/datepicker/moment.min.js"></script>
