--- a/AppEducation/AppEducation/Views/_ViewImports.cshtml
+++ b/AppEducation/AppEducation/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using AppEducation.Models
 @using AppEducation.Models.Users
 @using Microsoft.AspNetCore.Identity
-@using System.Linq;
+@using System.Linq
+@addTagHelper AppEducation.Infastructure.* , AppEducation
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
