--- a/AppEducation/AppEducation/Views/Account/Profile.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Profile.cshtml
@@ -1,32 +1,17 @@
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <link rel="stylesheet" href="~/pages/profile/css/all.min.css">
-    <link rel="stylesheet" href="~/pages/profile/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/pages/profile/css/font.google.css">
-    <link rel="stylesheet" href="~/pages/profile/css/OneSignalSDKStyles.css">
-    <link rel="stylesheet" href="~/pages/profile/css/profile.css">
-    <link rel="stylesheet" href="~/pages/profile/css/font-awesome.css">
-    <link rel="stylesheet" href="~/pages/profile/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/pages/profile/css/HeaderUser.css">
-    <link rel="stylesheet" href="~/pages/profile/css/FooterUser.css">
+@{
+    ViewData["Title"] = "Profile";
+    Layout = "_LayoutAccount";
+}
+@section Head {
     <link rel="stylesheet" href="~/pages/profile/css/MainUser.css">
-
-</head>
-
-<body>
+}
     <header class="header-fixed header-boxshadow-active">
         <div class="#wrapper40-scroll" id="#wrapper">
             <div class="container">
                 <div class="row top-header">
                     <div class="col-md-4 col-xs-3">
                         <a href="#homepage">
-                            <img class="header-logo" src="./images/LogoEducation.png" alt="logo">
+                            <img class="header-logo" src="~/pages/profile/images/LogoEducation.png" alt="logo">
                         </a>
                     </div>
                     <div class="col-md-8 col-xs-9">
@@ -62,19 +47,19 @@
                                 <li class="dropdown-toggle dropdown" data-toggle="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                         aria-haspopup="true" aria-expanded="false">
-                                        <img src="./images/flag_vi.png" alt="language_flag" class="flag_uk mr-2">
+                                        <img src="~/pages/profile/images/flag_vi.png" alt="language_flag" class="flag_uk mr-2">
                                         Tiếng Việt
                                         <span class="caret"></span>
                                     </a>
                                     <ul class="dropdown-menu" style="min-width: fit-content;">
                                         <li>
                                             <a href="#">
-                                                <img src="./images/flag_uk.png" alt="flag uk" class="flag_uk">
+                                                <img src="~/pages/profile/images/flag_uk.png" alt="flag uk" class="flag_uk">
                                                 Tiếng Anh
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#"><img src="./images/flag_vi.png" alt="flag vn" class="flag_uk">
+                                            <a href="#"><img src="~/pages/profile/images/flag_vi.png" alt="flag vn" class="flag_uk">
                                                 Tiếng Việt
                                             </a>
                                         </li>
@@ -83,7 +68,7 @@
                                 <li class="notify-header dropdown-toggle dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                         aria-haspopup="true" aria-expanded="false">
-                                        <img src="./images/bell.png" class="bell-notify">
+                                        <img src="~/pages/profile/images/bell.png" class="bell-notify">
                                         <span class="text-notify">
                                             Thông báo
                                         </span>
@@ -94,14 +79,14 @@
                                                 <span>Thông báo</span>
                                             </div>
                                             <div class="col-md-8 menu-notify dropdown">
-                                                <img src="./images/three-dots.png" class="menu-dots dropdown-toggle"
+                                                <img src="~/pages/profile/images/three-dots.png" class="menu-dots dropdown-toggle"
                                                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                                     aria-expanded="false">
                                                 <div class="mark-read-menu dropdown-menu"
                                                     aria-labelledby="dropdownMenuButton">
-                                                    <img src="/images/polygon-white.png">
+                                                    <img src="~/pages/profile/images/polygon-white.png">
                                                     <div class="content-mark-read">
-                                                        <img src="/images/check-gray.png">
+                                                        <img src="~/pages/profile/images/check-gray.png">
                                                         <span>Đánh dấu tất cả là đã đọc</span>
                                                     </div>
                                                 </div>
@@ -113,7 +98,7 @@
                                         <div class="table-notify-footer">
                                             <a href="#/user/notification">
                                                 <span>Xem tất cả thông báo</span>
-                                                <img src="/images/arrow-right.png" class="img-arrow-right"></a>
+                                                <img src="~/pages/profile/images/arrow-right.png" class="img-arrow-right"></a>
                                         </div>
                                     </div>
                                 </li>
@@ -129,7 +114,7 @@
                                     <a href="#">Chuẩn bị bài trước khi vào lớp</a>
                                 </li>
                                 <li>
-                                    <a href="#">Học trực tuyến</a>
+                                    <a asp-action="Index">Học trực tuyến</a>
                                 </li>
                                 <li>
                                     <a href="#">Làm bài tập về nhà</a>
@@ -163,16 +148,14 @@
                 <div>
                     <div class="left-bar-user">
                         <ul style="list-style: none;" >
-                            <li class="active"><a href="/user/info"><img  src="./images/user_info_icon.png"
-                                        alt="./images/user_info_icon.png"><span> Thông tin cá nhân</span></a></li>
-                            <!-- <li class=""><a href="./user/package"><img style="width: 15px" src="./images/package_icon.png"
-                                        alt="./images/package_icon.png"><span> Thông tin tài khoản</span></a></li> -->
-                            <li class=""><a href="/user/history"><img style="width: 15px" src="./images/history_icon.png"
-                                        alt="./images/history_icon.png"><span> Lịch sử học tập</span></a></li>
-                            <li class=""><a href="/user/renew-package"><img style="width: 15px" src="./images/renew_package_icon.png"
+                            <li class="active"><a href="/user/info"><img  src="~/pages/profile/images/user_info_icon.png"
+                                        alt="~/pages/profile/images/user_info_icon.png"><span> Thông tin cá nhân</span></a></li>
+                            <li class=""><a href="/user/history"><img style="width: 15px" src="~/pages/profile/images/history_icon.png"
+                                        alt="~/pages/profile/images/history_icon.png"><span> Lịch sử học tập</span></a></li>
+                            <li class=""><a href="/user/renew-package"><img style="width: 15px" src="~/pages/profile/images/renew_package_icon.png"
                                         alt="/images/renew_package_icon.png"><span> Điểm số</span></a></li>
-                            <li class=""><a href="/user/notification"><img style="width: 15px" src="./images/icon_notify.png"
-                                        alt="./images/icon_notify.png"><span> Thông báo</span></a></li>
+                            <li class=""><a href="/user/notification"><img style="width: 15px" src="~/pages/profile/images/icon_notify.png"
+                                        alt="~/pages/profile/images/icon_notify.png"><span> Thông báo</span></a></li>
                         </ul>
                     </div>
                     <div class="user-layout-children">
@@ -187,7 +170,7 @@
                                     </div>
                                     <div class="col-md-12 " >
                                         <div class="col-md-3 file "><span class="text-size-avatar">Ảnh</span>
-                                            <img id="myImg" src="./images/google.png" width="200" class="avatar img-circle img-thumbnail" alt="avatar">
+                                            <img id="myImg" src="~/pages/profile/images/google.png" width="200" class="avatar img-circle img-thumbnail" alt="avatar">
                                         </div>
                                         <div class="col-md-9">
                                             <div class="user-info-avatar">
@@ -259,88 +242,32 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="box user-social-box col-md-12" id="user-social-box">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="col-md-3"><span class="text-normal"><strong>Liên kết mạng xã
-                                                    hội</strong></span></div>
-                                    </div>
-                                    <div>
-                                        <div class="col-md-12">
-                                            <div class="col-md-3"><img src="/images/facebook.png" alt="/images/icon/facebook.png">
-                                                    <span class="text-normal">Liên kết Facebook</span>
-                                            </div>
-                                            <div class="col-md-9 text-right"><a class="update-button">Liên kết ngay</a>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12 border-top fix-size">
-                                            <div class="col-md-3"><img src="/images/google.png"
-                                                    alt="./images/google.png"><span class="text-normal">Liên kết
-                                                    Google</span></div>
-                                            <div class="col-md-9 text-right"><span class="no-drop">Đã liên kết (
-                                                    cuongtop4598@gmail.com )</span></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="container" style="padding-top: 70px;">
-            <div class="row">
 
-                <div class="row">
-                    <div class="col-sm-6 col-xs-12">
-                        <p class="copy-right" style="margin-top: 10px; color: azure;">Bản quyền © 2020 MTA Education -
-                            Version Demo </p>
-                    </div>
-                    <div class="col-sm-6 col-xs-12 text-right">
-                        <a class="btn btn-facebook btn-social mr-4" href="https://www.facebook.com" target="_blank">
-                            <i style="color:cyan;" class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
-                        <a class="btn btn-youtube btn-social mr-4" href="https://www.youtube.com" target="_blank">
-                            <i style="color: crimson;" class="fa fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-    </footer>
-</body>
+@section Script {
+    <script>
+    $(document).ready(function() {  
+        var readURL = function(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
 
+                reader.onload = function (e) {
+                    $('.avatar').attr('src', e.target.result);
+                }
 
-<script>
-$(document).ready(function() {  
-    var readURL = function(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-
-            reader.onload = function (e) {
-                $('.avatar').attr('src', e.target.result);
+                reader.readAsDataURL(input.files[0]);
             }
-
-            reader.readAsDataURL(input.files[0]);
         }
-    }
-    $(".file-upload").on('change', function(){
-        readURL(this);
-    });
-    });
+        $(".file-upload").on('change', function(){
+            readURL(this);
+        });
+        });
 
-</script>
-<script src="~/pages/profile/js/profile.js"></script>
-<script src="~/pages/profile/js/1209952130-idpiframe.js" async=""></script>
-<script src="~/pages/profile/js/analytics.js" async=""></script>
-<script src="~/pages/profile/js/bootstrap.min.js" async=""></script>
-<script src="~/pages/profile/js/google.api-client.js" async=""></script>
-<script src="~/pages/profile/js/google.platform.js" async=""></script>
-<script src="~/pages/profile/js/index.101202010.js" async=""></script>
-<script src="~/pages/profile/js/jquery.min.js" async=""></script>
-<script src="~/pages/profile/js/main.chunkhash.101202010.bundle.js" async=""></script>
-<script src="~/pages/profile/js/OneSignalPageSDKES6.js" async=""></script>
-<script src="~/pages/profile/js/OneSignalSDK.js" async=""></script>
-<script src="~/pages/profile/js/main_vendor.chunkhash.101202010.bundle.js"></script>
-<script src="~/pages/profile/js/jquery.3.4.1.js"></script>
+    </script>
+}
