--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -90,6 +90,7 @@
                         <div class="vcrx-item-box vcrx-webcam">
                             <div class="box-webcam box-list">
                                 <div class="video-cam">
+                                    <video id="camera" autoplay="autoplay"></video> 
                                 </div>
                             </div>
                         </div>
@@ -98,7 +99,7 @@
                 <div class="group-right">
                     <div class="vcrx-item-box vcrx-header">
                         <div class="header">
-                            <div class="box-logo-topica"><img src="./images/logo.png"></div>
+                            <div class="box-logo-topica"><img src="~/pages/Presents/images/logo.png"></div>
                             <div class="box-media-control">
                                 <div class="group-media-control">
                                     <div class="media-control">
@@ -172,6 +173,7 @@
                                             </p>
                                         </div>
                                         <div class="vcr-slide-box">
+                                            <video id="screen" autoplay="autoplay"></video>
                                         </div>
                                     </div>
                                 </div>
