them 1 it vao connectionhub.js

--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -103,7 +103,10 @@
                             <div class="box-media-control">
                                 <div class="group-media-control">
                                     <div class="media-control">
-                                        <div title="Mic" class="mic-control media-box">
+                                        <div title="Camera" id="cam" class="mic-control media-box">
+                                            <i class="fa fa-microphone" aria-hidden="true"></i>
+                                        </div>
+                                        <div title="Mic" id ="mic" class="mic-control media-box">
                                             <i class="fa fa-microphone" aria-hidden="true"> </i>
                                         </div>
 
