--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -49,7 +49,7 @@
 </section>
 <div id="id01" class="modal">
     <div class="cont-create">
-        <form class="modal-content" method="post" asp-action="Create" asp-controller="JoinClass">
+        <form class="modal-content" method="post" asp-action="Create" asp-controller="Home">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="cont-center">
                 <div class="imgcontainer">
@@ -86,7 +86,7 @@
 </div>
 <div id="id02" class="modal">
     <div class="cont-create">
-        <form class="modal-content" method="post" asp-action="Join" asp-controller="JoinClass">
+        <form class="modal-content" method="post" asp-action="Join" asp-controller="Home">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="cont-center">
                 <div class="imgcontainer">
