--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -3,7 +3,6 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutPresent.cshtml";
 }
-@model Classes
 <div id="topica-vcr">
     <div class="AtlaskitThemeProvider__LegacyReset-sc-431dkp-0 tOoji">
         <div class="wrapper">
@@ -90,7 +89,6 @@
                         <div class="vcrx-item-box vcrx-webcam">
                             <div class="box-webcam box-list">
                                 <div class="video-cam">
-                                    <video id="camera" autoplay="autoplay"></video> 
                                 </div>
                             </div>
                         </div>
@@ -99,14 +97,11 @@
                 <div class="group-right">
                     <div class="vcrx-item-box vcrx-header">
                         <div class="header">
-                            <div class="box-logo-topica"><img src="~/pages/Presents/images/logo.png"></div>
+                            <div class="box-logo-topica"><img src="./images/logo.png"></div>
                             <div class="box-media-control">
                                 <div class="group-media-control">
                                     <div class="media-control">
-                                        <div title="Camera" id="cam" class="mic-control media-box">
-                                            <i class="fa fa-microphone" aria-hidden="true"></i>
-                                        </div>
-                                        <div title="Mic" id ="mic" class="mic-control media-box">
+                                        <div title="Mic" class="mic-control media-box">
                                             <i class="fa fa-microphone" aria-hidden="true"> </i>
                                         </div>
 
@@ -176,7 +171,6 @@
                                             </p>
                                         </div>
                                         <div class="vcr-slide-box">
-                                            <video id="screen" autoplay="autoplay"></video>
                                         </div>
                                     </div>
                                 </div>
@@ -371,7 +365,6 @@
 <script>
     const username = "@User.Identity.Name";
     console.log(username);
-    const classid = "@Model.ClassID";
 </script>
 <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
 <script src="~/js/ConnectionHub.js"></script>
