--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -274,7 +274,8 @@
                                                                         </div>
                                                                         <div class="box-content-chat"><div class="chatmessage"><div class="username localuser"></div><div class="timestamp">14:54:44</div><div class="usermessage"><p class="userMessageContent">Good afternoon</p></div></div></div>
                                                                     </div>
-                                                                    <textarea class="text-area" spellcheck="false" id="usermsg" data-i18n="[placeholder]chat.messagebox" placeholder="Nhập tin nhắn"></textarea>
+                                                                    <textarea id="messageBox" class="text-area" spellcheck="false" id="usermsg" data-i18n="[placeholder]chat.messagebox" placeholder="Nhập tin nhắn"></textarea>
+                                                                    <input id="sendButton" type="button" value="Send"/>
                                                                 </div>
                                                             </div>
                                                         </div>
